--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm run clean && tsc -p src/",
+    "build:watch": "tsc -p src/ -w",
+    "clean": "rimraf dist/",
+    "lint": "eslint src/ --ext .ts",
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
   },
   "repository": {
     "type": "git",
@@ -18,6 +23,17 @@
   },
   "homepage": "https://github.com/JayKay24/design_patterns_in_typescript#readme",
   "dependencies": {
-    "@types/node": "^16.6.2"
+    "@types/node": "^16.6.2",
+    "typescript": "^4.4.2"
+  },
+  "devDependencies": {
+    "@types/rimraf": "^3.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "prettier": "^2.3.2",
+    "rimraf": "^3.0.2"
   }
 }
