--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm run build; node ./dist/test.js",
     "build": "npm run clean && tsc -p src/",
     "build:watch": "tsc -p src/ -w",
     "clean": "rimraf dist/",
@@ -23,10 +24,10 @@
   },
   "homepage": "https://github.com/JayKay24/design_patterns_in_typescript#readme",
   "dependencies": {
-    "@types/node": "^16.6.2",
     "typescript": "^4.4.2"
   },
   "devDependencies": {
+    "@types/node": "^16.7.5",
     "@types/rimraf": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
